--- a/writeup/cryptography.tex
+++ b/writeup/cryptography.tex
@@ -1412,6 +1412,7 @@ impossibility results that seem somewhat artificial. We will conclude the
 chapter by surveying some alternatives.
 
 \subsection{Alternative Approaches}
+\label{sec:alternatives}
 
 Several authors attempt to simplify UC by reducing the intended scope. This
 approach is most notably taken by the ``simple UC'' approach of~\cite{ccl-2015}
