--- a/writeup/references.bib
+++ b/writeup/references.bib
@@ -2034,3 +2034,66 @@
 	journal = {arXiv preprint arXiv:1905.05636},
 	year = {2019},
 }
+
+@inproceedings{sakayori-2021,
+	author = {Sakayori, Ken and Tsukada, Takeshi},
+	title = {{Output Without Delay: A $\pi$-Calculus Compatible with Categorical
+	         Semantics}},
+	booktitle = {6th International Conference on Formal Structures for Computation
+	             and Deduction (FSCD 2021)},
+	pages = {32:1--32:22},
+	series = {Leibniz International Proceedings in Informatics (LIPIcs)},
+	ISBN = {978-3-95977-191-7},
+	ISSN = {1868-8969},
+	year = {2021},
+	volume = {195},
+	editor = {Kobayashi, Naoki},
+	publisher = {Schloss Dagstuhl -- Leibniz-Zentrum f{\"u}r Informatik},
+	address = {Dagstuhl, Germany},
+	URL = {
+	       https://drops-dev.dagstuhl.de/entities/document/10.4230/LIPIcs.FSCD.2021.32
+	       },
+	URN = {urn:nbn:de:0030-drops-142705},
+	doi = {10.4230/LIPIcs.FSCD.2021.32},
+	annote = {Keywords: \pi-calculus, categorical semantics, linear approximation},
+}
+
+@inproceedings{leifer-2000,
+	author = "Leifer, James J. and Milner, Robin",
+	editor = "Palamidessi, Catuscia",
+	title = "Deriving Bisimulation Congruences for Reactive Systems",
+	booktitle = "CONCUR 2000 --- Concurrency Theory",
+	year = "2000",
+	publisher = "Springer Berlin Heidelberg",
+	address = "Berlin, Heidelberg",
+	pages = "243--258",
+	abstract = "The dynamics of reactive systems, e.g. CCS, has often been defined
+	            using a labelled transition system (LTS). More recently it has
+	            become natural in defining dynamics to use reaction rules - i.e.
+	            unlabelled transition rules - together with a structural
+	            congruence. But LTSs lead more naturally to behavioural
+	            equivalences. So one would like to derive from reaction rules a
+	            suitable LTS.",
+	isbn = "978-3-540-44618-7",
+}
+
+@misc{stay-2015,
+	title = {Higher category models of the pi-calculus},
+	author = {Mike Stay and Lucius Gregory Meredith},
+	year = {2015},
+	eprint = {1504.04311},
+	archivePrefix = {arXiv},
+	primaryClass = {cs.LO},
+}
+
+@article{basu-2020,
+	title = {CATEGORICAL COMPLEXITY},
+	volume = {8},
+	ISSN = {2050-5094},
+	url = {http://dx.doi.org/10.1017/fms.2020.26},
+	DOI = {10.1017/fms.2020.26},
+	journal = {Forum of Mathematics, Sigma},
+	publisher = {Cambridge University Press (CUP)},
+	author = {BASU, SAUGATA and ISIK, UMUT},
+	year = {2020},
+}
