--- a/writeup/categorical-cryptography.tex
+++ b/writeup/categorical-cryptography.tex
@@ -190,6 +190,7 @@ not give them here. Now \scat{CompStoch} is in fact (isomorphic to) the Kleisi
 category of $G_c$.
 
 \subsection{Efficient and Effectful Computation}
+\label{sec:ef-comp}
 
 Suppose that we are given some wide\footnote{A subcategory is \emph{wide} if it
 contains all the objects; equivalently, if it contains all the identities.}
@@ -1459,6 +1460,7 @@ another layer of analysis, dealing with adversarial behavior. That will be the
 subject of \Cref{sec:security}.
 
 \subsection{Extensions to the Framework}
+\label{sec:extensions}
 
 \subsubsection{Reusable Resources}
 In the title of
@@ -1523,7 +1525,7 @@ intuitionistic logic\footnote{
   Normally we consider such situations with significantly more structure than just
   the multiplicatives, but the situation is the same even in this case.
 }. It turns out that any monoidal adjunction between categories with this
-structure gives the necessary structure on the comonad $GF$; as a consequence,
+structure gives the necessary structure on the comonad $FG$; as a consequence,
 such adjunctions are called \emph{linear-non-linear}. In this way, $F$ is an
 embedding of intuitionistic terms as linear terms, while $G$ forgets the
 linearity of a term. A standard example of this structure is the free-forgetful
@@ -2753,6 +2755,7 @@ to make the proofs work, but we have preferred the strict approach here for its
 easy relation to the 1-categorical case.
 
 \section{Conclusion}
+\label{sec:conclusion}
 \subsection{Paths Not Taken}
 
 We spent significant time over the year in directions which did not ultimately
