--- a/writeup/thesis.tex
+++ b/writeup/thesis.tex
@@ -95,8 +95,14 @@ support of my friends and family. I love and appreciate you all so much.
 \end{dedication}
 
 
-% \chapter*{Abstract}
-% TODO: abstract
+\chapter*{Abstract}
+We present introductory material on cryptography and category theory, focused on
+the prerequisites to cryptographic composability. We then present the approach
+to cryptographic composability of \citeauthor{broadbent-karvonen-2022}. We give
+several novel contributions, including a new model for cryptographic protocols
+which use both single- and multi-use resources, and a 2-categorical
+generalization of their model which incorporates data about computational
+reductions.
 % TODO: is there a better abstract style we can use?
 
 \mainmatter% here the regular arabic numbering starts
